# TCC_Robotica

./: .gitignore
arduino/: arduino_code.ino
raspberry/: CMakeLists.txt  buzzline_config.json  line_follower.cpp  server.py  start.sh
